Bhai ki phir se css

--- a/student.html
+++ b/student.html
@@ -58,8 +58,8 @@
       </div>
     </nav>
 
-    <div class="container-fluid register">
-      <div class="">
+    <div class="container register">
+      <div class="studentForm">
         <form>
           <h2 style="text-align: left;">
             Edit User
