--- a/login.html
+++ b/login.html
@@ -5,26 +5,74 @@
     <meta name="viewport" content="width=!, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <title>Home</title>
+
+     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
+    <!-- Material Design Bootstrap -->
+    <link rel="stylesheet" href="css/mdb.min.css" />
+    <title>Login</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light colour">
+    <nav class="mb-1 navbar navbar-expand-lg navbar-light colour1">
       <a class="navbar-brand" href="#">Navbar</a>
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
+        data-target="#navbarSupportedContent-4"
+        aria-controls="navbarSupportedContent-4"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+        <ul class="navbar-nav ml-auto">
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="#">
+              <i class="fab fa-facebook-f"></i> Facebook
+              <span class="sr-only">(current)</span>
+            </a>
+          </li> -->
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fab fa-instagram"></i> Instagram</a
+            >
+          </li> -->
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              id="navbarDropdownMenuLink-4"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <i class="fas fa-user"></i> Profile
+            </a>
+            <div
+              class="dropdown-menu dropdown-menu-right dropdown-info"
+              aria-labelledby="navbarDropdownMenuLink-4"
+            >
+              <a class="dropdown-item" href="#">My account</a>
+              <a class="dropdown-item" href="#">Log out</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </nav>
+
+<div class="container my-4">
     <div class="mylogin">
       <!-- Default form login -->
-      <form class="text-center border border-light p-5" action="#!">
+      <div class="login-box">
+      <form class="text-center border border-light p-5 studentForm" action="#!">
         <p class="h4 mb-4">Sign in</p>
 
         <!-- Email -->
@@ -69,13 +117,10 @@
         </button>
 
         <!-- Register -->
-        <p>
-          Not a member?
-          <a href="">Register</a>
-        </p>
+        
 
         <!-- Social login -->
-        <p>or sign in with:</p>
+        <!-- <p>or sign in with:</p>
 
         <a href="#" class="mx-2" role="button"
           ><i class="fab fa-facebook-f light-blue-text"></i
@@ -88,10 +133,12 @@
         ></a>
         <a href="#" class="mx-2" role="button"
           ><i class="fab fa-github light-blue-text"></i
-        ></a>
+        ></a> -->
       </form>
+      </div>
       <!-- Default form login -->
     </div>
+  </div>
   </body>
 
   <script
